assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Mukta&family=lato:wght@300&display=swap');
   
*  { 
  margin: 0;
  padding: 0;
  border: none;
}
    

body {
  font-family: lato, sans-serif;
  font-weight: 300;
  color: #000000;
  background-color: #f2ede3;
}

p {
  font-size: 1.25em;
}

h1,
h2,
h3 {
  font-family: mukta, sans-serif;

}


/*....................................navbar and logo */

nav {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  background-color: #727778;
  justify-content: space-between;
  overflow: auto;
  min-height: 6.25rem;  
  }

nav ul li {
  position: relative;
  margin: 0 30px;
  list-style: none;
  display: inline-block;
  padding: 25px;
  font-size: 16px;   
  }

  nav ul li a {
  font-family: mukta, sans-serif;
  font-weight: 600;
  font-size: 105%;
  color:#000000;
  text-decoration: none;  
  border-color: #000000;
}

#navbar-logo{
  height: 52px;
  border-radius: 50%;
  margin-top: -32px;
  padding-left: 40px   
}

/*....................................active link and hover styling */

#menu a:hover {
  color: #d8b16e;
}

/*....................................hero image and slogan */

#hero-image {
  background-image: url("../images/austin-ramsey-nmXi-HCD_F8-unsplash.webp");
  width: 100%;
  height: 500px;
  opacity: 0.9;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
}


#cover-text {
  position: relative;
  text-align: center;
  font-size: 250%;
  padding-top: 3.25em;
  letter-spacing: 4px  
}

#cover-text-about {
  position: relative;
  text-align: center;
  font-size: 250%;
  padding-top: 4.5em;
  letter-spacing: 4px;  
}

#cover-text-services {
  position: relative;
  text-align: center;
  font-size: 250%;
  padding-top: 4.5em;
  letter-spacing: 4px; 
}

.bespoke {
  color: #451400f5 ;
}

.reliable {
  color:#f2ede3;
}
/*.................................... services section */
.services-text {
  display: flex;
  justify-content: center;
  padding: 20px 20px 0px;
}

.services-button {
  font-family: mukta, sans-serif;
  position: relative;
  text-align: center;
  border: transparent none;
  font-size: 300%;
  font-weight: 600;
  letter-spacing: 2px;
  color: #670101;
  text-decoration: none;
  padding-top: 20px;
}

.services-button:hover {
  color: #d8b16e;
}

 hr {
  border-top: 4px solid #d8b16e;
  width: 60px;
  border-radius: 2px;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 20px;
}

.grid {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(350px, 3fr));
  margin: 0 auto;
  column-gap: 40px;
  row-gap: 40px;
  padding: 20px 50px;
}
  

.grid h2 {
  font-family: mukta, sans-serif;
  padding-top: 10px;
  font-weight: 500;
  text-align: center;
  color: #670101;
}
  
  
.services-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(350px, 3fr));
  margin: 0 auto;
  column-gap: 40px;
  row-gap: 40px;
  padding: 20px 50px;
} 
  

.services-grid h2 {
  font-family: mukta, sans-serif;
  padding: 10px;
  font-weight: 500;
  text-align: center;
  color: #670101; 
}

.joinery-container {
  border: 20px solid #ffffff;
  border-radius: 10px;
  background-color: #ffffff;
}
.joinery-container h2 {
  display:flex;
  justify-content: center;
  flex-wrap: wrap;
  background-color: #ffffff;
}
.joinery-container h4 {
  display: flex;
  justify-content: center;
  font-family: mukta, sans-serif;
  padding: 10px;
  font-weight: 200;
  color: #000000;
}
  
  /*.................................... testimonials section */

#testimonials {
  display: flex;
  justify-content: center;
  padding-top: 40px;
  padding-bottom: 20px;
  font-size: 300%;
  font-weight: 500;
  letter-spacing: 1px;
  color: #670101;
}

.test-grid {
  display:flex;
  margin: 0 auto;
  column-gap: 40px;
  padding: 20px 40px 40px 40px;
      
}
.test-grid h2 {
  font-family: mukto, sans-serif;
  padding-top: 75px;
  padding-bottom: 20px;
  font-weight: 500;
  text-align: center;
  color: #670101
}

.test-grid p {
  padding: 20px;
  font-size: 90%;
}

.test-grid h5 {
  text-align: center;
}

.test-1 {
  border: 20px solid #f2ede3;
  background-color: #fff;
}
    
.test-2 {
  border: 20px solid #f2ede3;
  background-color: #fff;
}
    
.test-3 {
  border: 20px solid #f2ede3;
  background-color: #fff;
}
  
.checked {
  text-align: center;
  padding-top: 10px;
  color: #d8b16e;
}

/*.................................... about page and progress bar */

.grid-about{
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(380px, 2fr));
  margin: 0 auto;
  column-gap: 3.25em;
  row-gap: 6.5em;
  padding: 4em;

}
  
.grid-about h2 {
  font-family: mukto, sans-serif;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 20px;
  font-weight: 500;
  font-size: 200%;
  text-align: center;
  color: #670101;
}

.ex-img {
  display: flex;
  align-items: center;
  justify-content: center;
  border: 40px solid #ffffff;
  border-radius: 10px;
  background-color: #ffffff;
}


.experience {
  border: 40px solid #fff;
  border-radius: 10px;
}
.grid-about h4 {
  font-family: mukta, sans-serif;
  padding: 20px;
  font-weight: 200;
  color:#000000;
}

#progress-bar-section{
  display: flex;
  justify-content: space-around;
  padding: 75px 75px 150px 75px;
  
}
#progress-bar-section img {
  max-width: 100%;
  
}


#progress-bar-section h3 {
  text-align: center;
    color: #670101;
}

.progress-bar-1 {
  position: relative;
  width: 40rem;
  height: 24px;
  padding-left: 4px;
  padding-top: 4px;
  background: #fff;
  border-radius: 25px;
  overflow: hidden;
  background-color: rgba(0, 0, 0, 0.1);
  box-shadow: inset 0 2px 2px rgba(0, 0, 0, 0.2);
  border: 1px solid #d8b16e;
  
}

.progress-bar-1 span {
  position: absolute;
  display:inline-block; 
  vertical-align: middle;
  height: 20px;
  border-radius: 12px;
  background-color: #670101;
  animation: progress-bar-1 10s ease;
}
/* ... */

